# pyroll-lendl-equivalent-method

./: .gitignore  README.md  hatch.toml  pyproject.toml
docs/: docs.tex  refs.bib
pyroll/lendl_equivalent_method/: __init__.py  hookimpls.py  lendl_method.py  report.py  reporter.py  roll_pass_hookspecs.py
pyroll_lendl_equivalent_method/: __init__.py  hookimpls.py  in_profile_hookspecs.py  out_profile_hookspecs.py  reporter.py  roll_pass_hookspecs.py
tests/: config.yaml  interior_test.py  shapely_test.py  test_solve.py  test_solve3.py
