[tool.poetry]
name = "pyroll-lendl-equivalent-method"
version = "1.0.0"
description = "Plugin for PyRoll providing Lendl's equivalent rectangle method"
authors = [
    "Christoph Renzing <christoph.renzing@imf.tu-freiberg.de>",
    "Max Weiner <max.weiner@imf.tu-freiberg.de>"
]

license = "BSD-3-Clause"
homepage = "https://pyroll-project.github.io/"
repository = "https://github.com/pyroll-project/pyroll-lendl-equivalent-method"
documentation = "https://github.com/pyroll-project/pyroll-lendl-equivalent-method/blob/main/docs/docs.pdf"
packages = [
    { include = "pyroll/lendl_equivalent_method" }
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = ">= 3.9, <3.11"
pyroll = "^1.0.0"
plotly = "^5.7.0"
Figures = "^0.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pyroll = { git = "https://github.com/pyroll-project/pyroll-core", branch = "main", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
