[project]
name = "pyroll-lendl-equivalent-method"
description = "Plugin for PyRolL providing the equivalent rectangle method by Lendl."
authors = [
    { name = "Christoph Renzing", email = "christoph.renzing@imf.tu-freiberg.de" },
    { name = "Max Weiner", email = "max.weiner@imf.tu-freiberg.de" }
]
license = "BSD-3-Clause"
requires-python = ">=3.9, <4.0"
dependencies = [
    "pyroll-core ~= 2.0b",
]

dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
